// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast API render toast at bottom-center position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  bottom: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at bottom-left position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  bottom: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at bottom-right position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  bottom: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at top-center position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,-100%,0) scale(0.1);
    -moz-transform: translate3d(0,-100%,0) scale(0.1);
    -ms-transform: translate3d(0,-100%,0) scale(0.1);
    transform: translate3d(0,-100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  top: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at top-left position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,-100%,0) scale(0.1);
    -moz-transform: translate3d(0,-100%,0) scale(0.1);
    -ms-transform: translate3d(0,-100%,0) scale(0.1);
    transform: translate3d(0,-100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,-100%,0) scale(0.1);
    -moz-transform: translate3d(0,-100%,0) scale(0.1);
    -ms-transform: translate3d(0,-100%,0) scale(0.1);
    transform: translate3d(0,-100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  top: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at top-right position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  top: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with actions 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #535353;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #ffffff;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 12px;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 svg {
  fill: #ffffff;
}

.emotion-4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-right: 12px;
}

.emotion-5 {
  border-style: solid;
  border-color: rgba(255,255,255,0.5);
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8 svg {
  fill: #ffffff;
}

.emotion-8:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-8:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-8:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-11 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          toast message
        </p>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <hr
        aria-hidden="true"
        class="emotion-5"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      >
        <button
          class="emotion-8"
          data-testid="button"
          type="button"
        >
          <div
            class="emotion-9"
          >
            <div
              class="emotion-10"
            >
              <span
                class="emotion-11"
              >
                undo
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with content as react element 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #535353;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #ffffff;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 svg {
  fill: #ffffff;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <div
          class="emotion-3"
        >
          <p
            class="emotion-4"
          >
            toast message
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with content as string and link 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #535353;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #ffffff;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 svg {
  fill: #ffffff;
}

.emotion-4 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-4 svg {
  fill: #0a68c1;
}

.emotion-4:hover:not(:disabled) {
  color: #02509b;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-4:active:not(:disabled) {
  color: #01396e;
}

.emotion-4:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-4:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    vertical-align: text-bottom;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
      eiusmod tempor incididunt
          <a
            class="emotion-4"
            href="/"
          >
            <span
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                NewsKit Link
              </span>
            </span>
          </a>
          ut labore et dolore magna aliqua.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #535353;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #ffffff;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #535353;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #ffffff;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 12px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-6 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        aria-live="polite"
        class="emotion-5"
        role="status"
      >
        <p
          class="emotion-6"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with overrides and all props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fdda9b;
  border-radius: 2px;
  padding: 20px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: red;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 16px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 4px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.1111111111111112;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 24px;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.1680555555555556em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2680555555555556em;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-8 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-right: 4px;
}

.emotion-9 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-14 {
    max-width: 100%;
  }
}

.emotion-15 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        aria-live="polite"
        class="emotion-5"
        role="status"
      >
        <p
          class="emotion-6"
        >
          Toast title
        </p>
        <p
          class="emotion-7"
        >
          toast message
        </p>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <hr
        aria-hidden="true"
        class="emotion-9"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-10"
    >
      <div
        class="emotion-11"
      >
        <button
          class="emotion-12"
          data-testid="button"
          type="button"
        >
          <div
            class="emotion-13"
          >
            <div
              class="emotion-14"
            >
              <span
                class="emotion-15"
              >
                undo
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with title 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #535353;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #ffffff;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
  color: #ffffff;
  margin-bottom: 4px;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-3 svg {
  fill: #ffffff;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          Toast title
        </p>
        <p
          class="emotion-4"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
